AUTOMAKE_OPTIONS = subdir-objects
SUBDIRS = prep 
bin_PROGRAMS = SMITH3
SMITH3_SOURCES = src/main.cc src/diagram.cc src/operator.cc src/op.cc src/active.cc src/equation.cc src/listtensor.cc \
src/tree.cc src/tensor.cc src/cost.cc src/rdm.cc src/rdm00.cc src/rdmI0.cc src/residual.cc src/energy.cc src/forest.cc

